Building with --disable-printing is broken
Categories
(Core :: Printing: Setup, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | fixed |
| firefox82 | --- | fixed |
People
(Reporter: fabrice, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Regressed by https://bugzilla.mozilla.org/show_bug.cgi?id=1661388 changes to nsGlobalWindowOuter.cpp
Updated•5 years ago
|
Comment 1•5 years ago
|
||
Set release status flags based on info from the regressing bug 1661388
| Assignee | ||
Comment 2•5 years ago
|
||
I can take this. What are you using --disable-printing for?
| Reporter | ||
Comment 4•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #2)
I can take this. What are you using
--disable-printingfor?
b2g builds for KaiOS.
| Assignee | ||
Comment 5•5 years ago
|
||
(In reply to [:fabrice] Fabrice Desré from comment #4)
b2g builds for KaiOS.
Does it have a big enough code-size impact that it warrants disabling? Android just disables window.print at runtime, and stubs the print service.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 6•5 years ago
|
||
Comment 8•5 years ago
|
||
| bugherder | ||
Comment 9•5 years ago
|
||
Comment on attachment 9173677 [details]
Bug 1661838 - Fix builds with --disable-printing. r=#layout-reviewers
Beta/Release Uplift Approval Request
- User impact if declined: --disable-printing being broken for builds other people create. maybe also small chance of conflict with other patches we need.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky):
- String changes made/needed:
Comment 10•5 years ago
|
||
Comment on attachment 9173677 [details]
Bug 1661838 - Fix builds with --disable-printing. r=#layout-reviewers
Approved for 81.0b6.
Comment 11•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
| Reporter | ||
Comment 12•5 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #5)
(In reply to [:fabrice] Fabrice Desré from comment #4)
b2g builds for KaiOS.
Does it have a big enough code-size impact that it warrants disabling? Android just disables window.print at runtime, and stubs the print service.
I don't know the code size impact, but I would say that if there's a build time flag it should work :) Thanks for fixing it anyway!
Updated•5 years ago
|
Description
•