Bug 1661838 - Fix builds with --disable-printing. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D89166