dom/base/nsGlobalWindowOuter.cpp
@@ -5250,6 +5250,7 @@ void nsGlobalWindowOuter::PrintOuter(ErrorResult& aError) {
     }
   }
 
+#ifdef NS_PRINTING
   nsCOMPtr<nsIPrintSettingsService> printSettingsService =
       do_GetService("@mozilla.org/gfx/printsettings-service;1");
   if (!printSettingsService) {
@@ -5274,6 +5275,7 @@ void nsGlobalWindowOuter::PrintOuter(ErrorResult& aError) {
   }
 
   Print(settings, nullptr, nullptr, isPreview, nullptr, aError);
+#endif
 }
 
 Nullable<WindowProxyHolder> nsGlobalWindowOuter::Print(
